# wayland-simple-compositor

./: .gitignore  README.md  client.c  client.h  compositor.c  compositor.h  desktop.c  desktop.h  main.c  main.cpp  meson.build  output.c  output.h  region.c  region.h  run.sh  shell.c  shell.h  surface.c  surface.h  xdg-shell.c  xdg-shell.h  y11.h
